[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name         = "chprog"
version      = "2.5.3"
description  = "USB Programming Tool for WCH Microcontrollers"
keywords     = ["ISP", "WCH", "CH552", "CH32V003", "CH32V203", "CH32X035", "microcontroller"]
dependencies = ["pyusb"]
requires-python = ">=3.6"
authors = [
    { name="Stefan Wagner", email="wagiminator@web.de" },
]
maintainers = [
    { name="Stefan Wagner", email="wagiminator@web.de" },
]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Embedded Systems",
]

[project.scripts]
chprog = "chprog.chprog:_main"

[project.urls]
Homepage   = "https://wagiminator.github.io/"
Repository = "https://github.com/wagiminator/MCU-Flash-Tools"
Issues     = "https://github.com/wagiminator/MCU-Flash-Tools/issues"
