[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "puyaisp"
version = "1.4.0"
authors = [
    { name="Stefan Wagner", email="wagiminator@web.de" },
]
maintainers = [
    { name="Stefan Wagner", email="wagiminator@web.de" },
]
description = "Programming Tool for PUYA PY32F0xx Microcontrollers"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
dependencies = [
    "pyserial",
]
keywords = ["PUYA", "PY32F002A", "PY32F003", "PY32F030", "microcontroller"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Embedded Systems",
]

[project.scripts]
puyaisp = "puyaisp:_main"

[project.urls]
Homepage = "https://wagiminator.github.io/"
Repository = "https://github.com/wagiminator/MCU-Flash-Tools"
Issues = "https://github.com/wagiminator/MCU-Flash-Tools/issues"
