[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name         = "stc8isp"
version      = "0.3.1"
description  = "Programming Tool for STC8G/8H Microcontrollers"
keywords     = ["ISP", "STC", "STC8", "STC8G", "STC8H", "microcontroller"]
dependencies = ["pyserial"]
requires-python = ">=3.8"
authors = [
    { name="Stefan Wagner", email="wagiminator@web.de" },
]
maintainers = [
    { name="Stefan Wagner", email="wagiminator@web.de" },
]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Embedded Systems",
]

[project.scripts]
stc8isp = "stc8isp.stc8isp:_main"

[project.urls]
Homepage   = "https://wagiminator.github.io/"
Repository = "https://github.com/wagiminator/MCU-Flash-Tools"
Issues     = "https://github.com/wagiminator/MCU-Flash-Tools/issues"
