[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name         = "stc8usb"
version      = "0.2.1"
description  = "USB Programming Tool for STC8H8KxxU Microcontrollers"
keywords     = ["ISP", "STC", "STC8", "STC8H8K64U", "STC8H8K32U", "microcontroller"]
dependencies = ["hid"]
requires-python = ">=3.8"
authors = [
    { name="Stefan Wagner", email="wagiminator@web.de" },
]
maintainers = [
    { name="Stefan Wagner", email="wagiminator@web.de" },
]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Embedded Systems",
]

[project.scripts]
stc8usb = "stc8usb.stc8usb:_main"

[project.urls]
Homepage   = "https://wagiminator.github.io/"
Repository = "https://github.com/wagiminator/MCU-Flash-Tools"
Issues     = "https://github.com/wagiminator/MCU-Flash-Tools/issues"
