[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stm32isp"
version = "0.8.0"
authors = [
    { name="Stefan Wagner", email="wagiminator@web.de" },
]
maintainers = [
    { name="Stefan Wagner", email="wagiminator@web.de" },
]
description = "Programming Tool for some STM32 Microcontrollers"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
dependencies = [
    "pyserial",
]
keywords = ["STM32", "STM32C011", "STM32F030", "STM32G030", "STM32L011", "microcontroller"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Embedded Systems",
]

[project.scripts]
stm32isp = "stm32isp:_main"

[project.urls]
Homepage = "https://wagiminator.github.io/"
Repository = "https://github.com/wagiminator/MCU-Flash-Tools"
Issues = "https://github.com/wagiminator/MCU-Flash-Tools/issues"